--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "description": "Aprendiendo NodeJS Express y Sequelize",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon server",
+    "dev": "nodemon server",
     "start": "node server"
   },
   "author": "Jesus Escobar",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
     "sequelize": "^6.3.3"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
   }
 }
